--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=3414596ce7ae158cea2b",
+    "/css/app.css": "/css/app.css?id=b4b02feb8dc171be9bc2"
 }
